--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -44,21 +44,21 @@ a_{m,1}&a_{m,2}&...&a_{m,j}&...&a_{m,n}\\
 \begin{Bemerkung}
 Die Eselsbrücke \textit{\textbf{Z}eile \textbf{Z}uerst, \textbf{S}palte \textbf{S}päter} ist für die Benennung einer Matrix hilfreich!\\\\
 Eine Matrix, die aus nur einer Spalte oder nur einer Zeile besteht, wird auch Vektor genannt.\\\\
-Ganz formal gesehen ist eine Matrix eine Funktion, die jedem Funktionswert $(i;j)$ einen Eintrag zuordnet. Matrizen bilden mit der Matrizenaddition und der Skalarmultiplikation einen abgeschlossenen Körper.
+Ganz formal gesehen ist eine Matrix eine Funktion, die jedem Funktionswert $(i;j)$ einen Eintrag zuordnet. Quadratische Matrizen vollen Rangs bilden mit der Matrizenaddition und der Skalarmultiplikation einen abgeschlossenen Körper.
 \end{Bemerkung}
 
 
 \begin{GTR-Tipp}
 Im Matrix Menü: $[\text{matrix}] + [\text{MATH}]$ kann man mit dem Befehl...\\
 \begin{enumerate}
-\item ... ref$[B]$ die \textbf{Dreiecksform} einer Matrix $B$ ausrechnen lassen:\\\\
+\item ... ref$[B]$ (''Row echelon form'') die \textbf{Dreiecksform} einer Matrix $B$ ausrechnen lassen:\\\\
 $$B= \begin{pmatrix}
 b_{1,1}&b_{1,2}&b_{1,3}&b_{1,4}\\
 0&b_{2,2}&b_{2,3}&b_{2,4}\\
 0&0&b_{3,3}&b_{3,4}\\
 0&0&0&b_{4,3}\\
 \end{pmatrix}$$\\
-\item ... rref$[C]$ die \textbf{Diagonalform} einer Matrix $C$ ausrechnen lassen. Die einzigen Nicht-Null Einträge sind auf der Hauptdiagonalen:\\\\
+\item ... rref$[C]$ (''Reduced row echelon form'') die \textbf{Diagonalform} einer Matrix $C$ ausrechnen lassen. Die einzigen Nicht-Null Einträge sind auf der Hauptdiagonalen:\\\\
 $$C= \begin{pmatrix}
 c_{1,1}&0&0&0\\
 0&c_{2,2}&0&0\\
@@ -66,7 +66,55 @@ c_{1,1}&0&0&0\\
 0&0&0&c_{4,4}\\
 \end{pmatrix}$$\\
 \end{enumerate}
-\end{GTR-Tipp}
+\end{GTR-Tipp}\\
+\\
+
+\subsection{Rang einer Matrix}
+
+\begin{Definition}
+Der \textbf{Rang} einer Matrix ist die maximale Anzahl linear unabhängiger Zeilen- bzw. Spaltenvektoren. \\Auf Deutsch und an Matrizen angewandt: Stammt eine Matrix aus einem Gleichungssystem, dann ist dieses System nicht redundant. Jede Zeile bzw. Spalte beschreibt demnach Zusammenhänge, die die anderen Spalten nicht geben. 
+\end{Definition}
+
+\begin{Beispiel}
+$$
+\tikzset{
+        round/.style = { rounded corners=2mm },
+        node style ge/.style={circle},}
+\tikzset{BarreStyle/.style =   {opacity=.3,line width=2.5 mm,line cap=round,color=#1}}
+\begin{tikzpicture}
+     \draw [BarreStyle=titlepagecolor]  (5.65,0.5) -- (5.65,-0.5) ;
+     \draw [BarreStyle=titlepagecolor]  (6.71,0.5) -- (6.71,-0.5) ;
+\node  at (6.16,1.35) {\textcolor{titlepagecolor}{$\cdot 2$}};
+\draw [->, thick, titlepagecolor] (5.65,0.8) to [bend left=90]  (6.71,0.8);
+\draw (7.85,0) node {$A = \begin{pmatrix}
+1&3&2\\
+2&4&4\\
+3&5&6\\
+\end{pmatrix} \qquad \qquad 
+B = \begin{pmatrix}
+1&3&2\\
+2&4&4\\
+3&5&\textcolor{red}{7}\\
+\end{pmatrix}$}
+\end{tikzpicture}
+$$
+
+Die Matrix $A$ ist vom Rang 2, da die erste und die dritte Spalte vielfache voneinander sind. Die dritte Spalte stellt einen Zusammenhang dar, den die erste schon gegeben hat. Die Spalten 1 und 3 sind redundant. Anhand des GTR kann man den Rang einer Matrix auch bestimmen: mit dem $rref$-Befehl kann man die ''Reduced row echelon form'' einer Matrix ausrechnen lassen:\\\\
+$$rref(A) = 
+\begin{pmatrix} 
+1&0&2\\ 
+0&1&0\\ 
+0&0&0\\  
+\end{pmatrix} \qquad \qquad
+rref(B) = 
+\begin{pmatrix} 
+1&0&0\\ 
+0&1&0\\ 
+0&0&1\\  
+\end{pmatrix}$$\\
+Die Anzahl an Nicht-Null-Zeilen der reduzierten Form verrät den Rang der Matrix: $\text{Rang}(A) = 2$  und $\text{Rang}(B) = 3$
+\end{Beispiel}\\
+
 
 
 \subsection{Addition und Multiplikation}
@@ -109,8 +157,7 @@ Die einzelnen Komponenten der Produktmatrix $C = A \times B$ werden so ausgerech
   $$c_{i,j} = \sum_{k=1}^{m} a_{i,k} \cdot b_{k,j}$$
 Die Komponenten $c_{i,j}$ ergeben sich also aus dem Skalarprodukt der $i$-ten Zeile von $A$ mit der $j$-ten Spalte von $B$. Die Durchführung per Hand wird mit der Falk'schen Anordnung erleichtert:
 
-\begin{equation*}
-\begin{array}{rl}
+$$\begin{array}{rl}
     $B$ \ = \
     \left(
     \begin{array}{c} b_{11} \\ \vdots \\ b_{p1}
@@ -143,12 +190,23 @@ Die Komponenten $c_{i,j}$ ergeben sich also aus dem Skalarprodukt der $i$-ten Ze
     \begin{array}{c} c_{1n} \\ \vdots \\ c_{in} \\
         \vdots \\ c_{mn}          \end{array}
     \right) &  = \ $C$
-\end{array}
-\end{equation*}\\
-\end{itemize}
+\end{array}$$\\
+Bei der Matrizenmultiplikation ist Vorsicht geboten! Generell werden Matrizen immer von links multipliziert, das heißt:
+$$A^3=A \cdot A^2$$\\
+\end{itemize}\\
+
+\subsection{Potenz und Invertierbarkeit einer quadratischen Matrix}
+
+Potenzgesetze, v.a. bei n times n Matrizen.....Invertierbarkeit 2 times 2 Matrizen ''AlphaA Lenvers''.....Determinante
 
 
 
+
+
+
+	\section{Anwendungen von Matrizen}
+
+Fürs ABI
 
 	\section{Lineare Gleichungssysteme und Gaußalgorithmus}
 
