--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -72,7 +72,7 @@ c_{1,1}&0&0&0\\
 \subsection{Rang einer Matrix}
 
 \begin{Definition}
-Der \textbf{Rang} einer Matrix ist die maximale Anzahl linear unabhängiger Zeilen- bzw. Spaltenvektoren. \\Auf Deutsch und an Matrizen angewandt: Stammt eine Matrix aus einem Gleichungssystem, dann ist dieses System nicht redundant. Jede Zeile bzw. Spalte beschreibt demnach Zusammenhänge, die die anderen Spalten nicht geben. 
+Der \textbf{Rang} einer Matrix ist die maximale Anzahl linear unabhängiger Zeilen- bzw. Spaltenvektoren. \\Auf Deutsch und an Matrizen angewandt: Stammt eine Matrix vollen Rangs aus einem Gleichungssystem, dann ist dieses System nicht redundant. Jede Zeile bzw. Spalte beschreibt demnach Zusammenhänge, die die anderen Spalten nicht geben. 
 \end{Definition}
 
 \begin{Beispiel}
