Pascale'sches Dreieck

--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 \usepackage{tocloft,titletoc,titlesec}            %Fürs Inhaltsverzeichnis
 \usepackage{flowfram}                              %Für die Seitenangabe
 \usepackage{nopageno}                             %Same
+\usepackage{lmodern}                              %Font size in tikz anpassen
 
 \pgfplotsset{compat=1.14}
 \usetikzlibrary{arrows}
