--- a/kap7/kap7.tex
+++ b/kap7/kap7.tex
@@ -174,24 +174,38 @@ $E$ bezeichnet das Erfolgs-Ereignis, $\overline{E}$ bezeichnet somit den Miserfo
 
 
 \subsection{Das Pascal'sche Dreieck}
+
 \begin{center}
-  \begin{array}{c}
-    (1)
-    \\\\
-    (1) \qquad (1)
-    \\\\
-    (1) \qquad (2) \qquad (1)
-    \\\\
-    (1) \qquad (3) \qquad (3) \qquad (1)
-    \\\\
-    (1) \qquad (4) \qquad (6) \qquad (4) \qquad (1)
-    \\\\
-    (1) \qquad (5) \qquad (10) \qquad (10) \qquad (5) \qquad (1)
-    \\\\
-    (1) \qquad (6) \qquad (15) \qquad (21) \qquad (15) \qquad (6) \qquad (1)
-    \\\\
-    (1) \qquad (7) \qquad (21) \qquad (35) \qquad (35) \qquad (21) \qquad (7) \qquad (1)
-  \end{array} % Und immer so weiter ...
+  \definecolor{honeyComb}{rgb}{0.9,0.85,0}
+  \definecolor{honey}{rgb}{0.9,0.55,0}
+  \begin{tikzpicture}
+    \foreach \x/\y in {0/0,   0.916/-1.58, -0.916/-1.58,   1.832/-3.16, 0/-3.16, -1.832/-3.16,   2.748/-4.74, -0.916/-4.74, 0.916/-4.74, -2.748/-4.74,   3.664/-6.32, 1.832/-6.32, 0/-6.32, -1.832/-6.32, -3.664/-6.32,   4.58/-7.9, 2.748/-7.9, 0.916/-7.9, -0.916/-7.9, -2.748/-7.9, -4.58/-7.9}
+      \draw[line width=0.8pt,color=honeyComb,fill=honeyComb] (\x,\y) -- (\x + 0.866,\y - 0.5) -- (\x + 0.866,\y - 1.5) -- (\x,\y - 2) -- (\x - 0.866,\y - 1.5) -- (\x - 0.866,\y - 0.5) -- (\x,\y) -- cycle;
+    \foreach \x/\y/\z in {0/0/1,   0.916/-1.58/1, -0.916/-1.58/1,   1.832/-3.16/1, 0/-3.16/3, -1.832/-3.16/1,   2.748/-4.74/1, -0.916/-4.74/2, 0.916/-4.74/3, -2.748/-4.74/1,   3.664/-6.32/1, 1.832/-6.32/4, 0/-6.32/6, -1.832/-6.32/4, -3.664/-6.32/1,   4.58/-7.9/1, 2.748/-7.9/5, 0.916/-7.9/10, -0.916/-7.9/10, -2.748/-7.9/5, -4.58/-7.9/1}
+      \draw[line width=0.8pt,color=white] (\x,\y-1) node[thick, font=\fontsize{18}{0}\selectfont, thick] {\z};
+    \foreach \x in {-1,0,1}
+      \draw[line width=3.5pt] (\x,1.5) circle (2pt);
+    \draw[line width=3.5pt,color=honey] (0,1) -- (0,0) -- (0.916,-0.5) -- (0.916,-1.5) -- (0,-2) -- (-0.916,-1.5) -- (-0.916,-0.5) -- (0,0);
+    \draw[line width=3.5pt,color=honey] (0,-2) -- (0,-3.08) -- (0.916,-3.62) -- (0.916,-4.66) -- (0,-5.22) -- (0,-6.26) -- (-0.916,-6.82) -- (-0.916,-7.86) -- (-1.832,-8.4) -- (-1.832,-9.44) -- (-0.916,-9.98) -- (-0.916,-10.3);
+    \draw[line width=3.5pt,color=honey,fill=honey] (-0.916,-10.3) circle (2pt);
+  \end{tikzpicture}
+  %\begin{array}{c}
+    %(1)
+    %\\\\
+    %(1) \qquad (1)
+    %\\\\
+    %(1) \qquad (2) \qquad (1)
+    %\\\\
+    %(1) \qquad (3) \qquad (3) \qquad (1)
+    %\\\\
+    %(1) \qquad (4) \qquad (6) \qquad (4) \qquad (1)
+    %\\\\
+    %(1) \qquad (5) \qquad (10) \qquad (10) \qquad (5) \qquad (1)
+    %\\\\
+    %(1) \qquad (6) \qquad (15) \qquad (21) \qquad (15) \qquad (6) \qquad (1)
+    %\\\\
+    %(1) \qquad (7) \qquad (21) \qquad (35) \qquad (35) \qquad (21) \qquad (7) \qquad (1)
+  %\end{array} % Und immer so weiter ...
 \end{center}\\
 Bekannt aus der Mittelstufe. Es ergibt sich, wenn man die Summe von zwei Werten eine Stufe tiefer, zwischen die beiden Werte schreibt. Es wird vor Allem für Binomialkoeffizienten verwendet, findet aber auch in der Wahrscheinlichkeitsrechnung Verwendung.
 
