--- a/kap7/kap7.tex
+++ b/kap7/kap7.tex
@@ -176,18 +176,24 @@ $E$ bezeichnet das Erfolgs-Ereignis, $\overline{E}$ bezeichnet somit den Miserfo
 \subsection{Das Pascal'sche Dreieck}
 
 \begin{center}
-  \definecolor{honeyComb}{rgb}{0.9,0.85,0}
+  \definecolor{honeyComb}{rgb}{1,0.85,0}
+  \definecolor{honeyComb2}{rgb}{0.9,0.7,0}
   \definecolor{honey}{rgb}{0.9,0.55,0}
   \begin{tikzpicture}
+
     \foreach \x/\y in {0/0,   0.916/-1.58, -0.916/-1.58,   1.832/-3.16, 0/-3.16, -1.832/-3.16,   2.748/-4.74, -0.916/-4.74, 0.916/-4.74, -2.748/-4.74,   3.664/-6.32, 1.832/-6.32, 0/-6.32, -1.832/-6.32, -3.664/-6.32,   4.58/-7.9, 2.748/-7.9, 0.916/-7.9, -0.916/-7.9, -2.748/-7.9, -4.58/-7.9}
       \draw[line width=0.8pt,color=honeyComb,fill=honeyComb] (\x,\y) -- (\x + 0.866,\y - 0.5) -- (\x + 0.866,\y - 1.5) -- (\x,\y - 2) -- (\x - 0.866,\y - 1.5) -- (\x - 0.866,\y - 0.5) -- (\x,\y) -- cycle;
+
+    \foreach \x/\y in {0/0,   0.916/-1.58, -0.916/-1.58,   1.832/-3.16, 0/-3.16, -1.832/-3.16,   2.748/-4.74, -0.916/-4.74, 0.916/-4.74, -2.748/-4.74,   3.664/-6.32, 1.832/-6.32, 0/-6.32, -1.832/-6.32, -3.664/-6.32,   4.58/-7.9, 2.748/-7.9, 0.916/-7.9, -0.916/-7.9, -2.748/-7.9, -4.58/-7.9}
+      \draw[line width=0.8pt,color=honeyComb2,fill=honeyComb2] (\x,\y - 0.3) -- (\x + 0.606,\y - 0.65) -- (\x + 0.606,\y - 1.35) -- (\x,\y - 1.7) -- (\x - 0.606,\y - 1.35) -- (\x - 0.606,\y - 0.65) -- (\x,\y - 0.3) -- cycle;
+
     \foreach \x/\y/\z in {0/0/1,   0.916/-1.58/1, -0.916/-1.58/1,   1.832/-3.16/1, 0/-3.16/3, -1.832/-3.16/1,   2.748/-4.74/1, -0.916/-4.74/2, 0.916/-4.74/3, -2.748/-4.74/1,   3.664/-6.32/1, 1.832/-6.32/4, 0/-6.32/6, -1.832/-6.32/4, -3.664/-6.32/1,   4.58/-7.9/1, 2.748/-7.9/5, 0.916/-7.9/10, -0.916/-7.9/10, -2.748/-7.9/5, -4.58/-7.9/1}
       \draw[line width=0.8pt,color=white] (\x,\y-1) node[thick, font=\fontsize{18}{0}\selectfont, thick] {\z};
-    \foreach \x in {-1,0,1}
-      \draw[line width=3.5pt] (\x,1.5) circle (2pt);
+
     \draw[line width=3.5pt,color=honey] (0,1) -- (0,0) -- (0.916,-0.5) -- (0.916,-1.5) -- (0,-2) -- (-0.916,-1.5) -- (-0.916,-0.5) -- (0,0);
     \draw[line width=3.5pt,color=honey] (0,-2) -- (0,-3.08) -- (0.916,-3.62) -- (0.916,-4.66) -- (0,-5.22) -- (0,-6.26) -- (-0.916,-6.82) -- (-0.916,-7.86) -- (-1.832,-8.4) -- (-1.832,-9.44) -- (-0.916,-9.98) -- (-0.916,-10.3);
-    \draw[line width=3.5pt,color=honey,fill=honey] (-0.916,-10.3) circle (2pt);
+    \draw[line width=3.5pt,color=honey,fill=honey] (-0.916,-10.3) -- (-0.77,-10.6) -- (-1.062,-10.6) -- cycle;
+    \draw[line width=3.5pt,color=honey,fill=honey] (-0.77,-10.6) arc (40:-220:0.2);
   \end{tikzpicture}
   %\begin{array}{c}
     %(1)
