--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -25,22 +25,7 @@ $\begin{array}{lcccl}
 \mbox{Dekadischer Logarithmus}&:&\lg a&:=&\log_{10}a
 \end{array}$
 \\
-	\section{Eigenschaften}
-
-\begin{itemize}
-\item$f(x)=\log_bx$
-\item$b\in\R^+\backslash 1$
-\item$D_f=\R^+$
-\item$W_f=\R$
-\item für $0>b>1$: $f$ ist streng monoton wachsend\\
-für $b>1$: $f$ ist streng monoton fallend
-\item für $0>b>1$: $\lim\limits_{x\to +\infty}f(x)=-\infty$\\
-			$\lim\limits_{x\to 0}f(x)=+\infty$\\
-für $b>1$: $\lim\limits_{x\to +\infty}f(x)=+\infty$\\
-	        $\lim\limits_{x\to 0}f(x)=-\infty$
-\item $f(1)=0$
-\item y-Achse ist senkrechte Asmyptote
-\end{itemize}
+	
 			\section{Rechengesetze}
 
 Aus den Potenzgesetzen kann man die Logarithmussätze erhalten.
@@ -64,7 +49,36 @@ Die zweite Potenzregel ist nur ein Sonderfall der ersten, da $\sqrt[n]{a}=a^{\fr
 		\section{Gleichungen lösen}
 
 
+\begin{Beispiel}
+\begin{itemize}
+\item $\ln(x-2)+\ln(x+2)=\ln(4+2x)\Leftrightarrow \ln\left(\dfrac{(x-2)\cdot (x+2)}{2\cdot (2+x)}\right)=0\Leftrightarrow \ln \left(\dfrac{x-2}{2}\right)=0\Leftrightarrow \dfrac{x-2}{2}=1\Leftrightarrow x=4$
+\item $\ln (1-x) + \ln (1+x)=2(\ln3-\ln5)\Leftrightarrow \ln \left(\dfrac{(1-x)\cdot (1+x)\cdot 5^2 }{ 3^2}\right)=0\Leftrightarrow \dfrac{(1-x)\cdot (1+x)\cdot 5^2 }{ 3^2}=1\Leftrightarrow x=\pm  \dfrac{4}{5} $
+\item$ e^{2+\ln x}=x+3\Leftrightarrow e^2 \cdot x=x+3\Leftrightarrow x=\dfrac{3}{e^2-1}$
+\item $2x\ln (3e^x-2)\Leftrightarrow$
+\end{itemize}
+\end{Beispiel}
+
+
 		\section{Logarithmusfunktionen}
+
+
+	\subsection{Eigenschaften}
+
+\begin{itemize}
+\item$f(x)=\log_bx$
+\item$b\in\R^+\backslash 1$
+\item$D_f=\R^+$
+\item$W_f=\R$
+\item für $0>b>1$: $f$ ist streng monoton wachsend\\
+für $b>1$: $f$ ist streng monoton fallend
+\item für $0>b>1$: $\lim\limits_{x\to +\infty}f(x)=-\infty$\\
+			$\lim\limits_{x\to 0}f(x)=+\infty$\\
+für $b>1$: $\lim\limits_{x\to +\infty}f(x)=+\infty$\\
+	        $\lim\limits_{x\to 0}f(x)=-\infty$
+\item $f(1)=0$
+\item y-Achse ist senkrechte Asmyptote
+\end{itemize}
+
 
 	\subsection{Ableitungsregeln}
 	\subsection{Funktionsuntersuchungsbeispiel}
