Dat will nicht funktionieren

--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -267,14 +267,14 @@
 
 		\begin{Definition}[- Betrag einer komplexen Zahl]
 			Der \textbf{Betrag} einer komplexen Zahl ist gleichbedeutend mit dem \textbf{Abstand der Zahl zum Origo} oder der Länge des Zeigers. Pythagoras liefert uns eine Formel:
-													$$|z| = \sqrt{x^2 + y^2} ; z = x + yi$$
+													$$|z| \defeq \sqrt{x^2 + y^2} ; z = x + yi$$
 		\end{Definition}
 
 		\begin{Definition}[- Argument einer komplexen Zahl]
 			Das \textbf{Argument} einer komplexen Zahl ist gleichbedeutend mit dem \textbf{Winkel der Zahl}, welcher der Zeiger mit der \glqq rechten Hälfte\grqq der reellen Achse einschließt (im mathematischen Sinn und modulo $2\pi$). Pythagoras liefert uns weitere Formeln:
 
 			\begin{enumerate}[1)]
-				\item 1. und 3. Quadrant: $$arg(z) = \tan^{-1}\left(\dfrac{y}{x}\right) + \dfrac{\pi}{2} \cdot (\text{Quadrant} - 1) ; z = x + yi$$
+				\item 1. und 3. Quadrant: $$arg(z) \definedBy \tan^{-1}\left(\dfrac{y}{x}\right) + \dfrac{\pi}{2} \cdot (\text{Quadrant} - 1) ; z = x + yi$$
 				\item 2. und 4. Quadrant: $$arg(z) = \tan^{-1}\left(\dfrac{x}{y}\right) + \dfrac{\pi}{2} \cdot (\text{Quadrant} - 1) ; z = x + yi$$
 			\end{enumerate}}
 
