--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,8 @@
 \usepackage{flowfram}                              %Für die Seitenangabe
 \usepackage{nopageno}                             %Same
 \usepackage{lmodern}                              %Font size in tikz anpassen
+\usepackage{mathtools}                            %definedBy (":="") Zeichen
+
 
 \pgfplotsset{compat=1.14}
 \usetikzlibrary{arrows}
