--- a/MAIN/main.tex
+++ b/MAIN/main.tex
@@ -1,8 +1,8 @@
 \documentclass[11p,a4paper,fleqn,twoside,openright]{report}
 \nonstopmode
 
-\usepackage[scale=.9]{helvet} % or tgheros        %Schriftart
-\renewcommand{\familydefault}{\sfdefault}
+%\usepackage[scale=.9]{helvet} % or tgheros        %Schriftart
+%\renewcommand{\familydefault}{\sfdefault}
 \usepackage{subfiles}                              %Kapitel einbinden
 \usepackage{amsmath}		                          %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
